--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,60 @@
 body{
   font-family: 'Lato', sans-serif;
+  margin: 0 100px;
 }
+.app__header{
+  margin-top: 42px;
+}
+
+.header__containerTitle{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 700;
+  font-size: 36px;
+}
+
 .header__title{
   font-family: "DM sans";
   color: #D04F4F;
 }
 
 .header__logo{
-  width: 50.8px;
+  height: 50.48px;
+}
+
+.header__containerSearch{
+  margin-top: 17px;
+  margin-bottom: 25px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #E7E7E7;
+  width: 100%;
+  height: 69px;
+}
+
+.search__input{ 
+  background-color: #E7E7E7; 
+  border: none;
+  padding-left: 24px;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.search__label{
+  height: 100%;
+}
+
+.search__button{
+  height: 100%;
+  background-color: #E7E7E7;
+  border: none;
+  padding-right: 16.43px;
+}
+
+.search__logo{
+  width: 32.06px;
 }
 
 .recipe__ingredientsList{
