--- a/css/header.css
+++ b/css/header.css
@@ -53,6 +53,7 @@
 }
 
 .tag__list{
+  margin-bottom: 15px;
   display: flex;
   flex-direction: row;
   color: #FFFFFF;
@@ -61,6 +62,7 @@
 }
 
 .tag__item{
+  min-width: 100px;
   height: 37px;
   padding: 8px 20px;
   display: flex;
@@ -71,6 +73,13 @@
   border-radius: 5px;
 }
 
+.tag__button{
+  height: 20px;
+  margin-right: 2px;
+  margin-left: 13px;
+}
+
 .tag__picture{
   width: 20px;
 }
+
