--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,9 @@
-
+/* Style du header */
 .app__header{
   margin-top: 42px;
 }
 
+/* Style du Logo et du titre */
 .header__containerTitle{
   display: flex;
   flex-direction: column;
@@ -20,6 +21,7 @@
   height: 50.48px;
 }
 
+/* Style de la barre de recherche */
 .header__containerSearch{
   margin-top: 17px;
   margin-bottom: 25px;
@@ -33,14 +35,20 @@
 
 .search__input{ 
   background-color: #E7E7E7; 
+  flex: auto;
   border: none;
   padding-left: 24px;
   font-weight: 400;
   font-size: 18px;
 }
 
+.search__input:focus{
+  outline: none;
+}
+
 .search__label{
   height: 100%;
+  margin-left: 20px;
 }
 
 .search__button{
@@ -51,35 +59,3 @@
 .search__picture{
   width: 32.06px;
 }
-
-.tag__list{
-  margin-bottom: 15px;
-  display: flex;
-  flex-direction: row;
-  color: #FFFFFF;
-  font-size: 14px;
-  font-weight: 700;
-}
-
-.tag__item{
-  min-width: 100px;
-  height: 37px;
-  padding: 8px 20px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #3282F7;
-  border-radius: 5px;
-}
-
-.tag__button{
-  height: 20px;
-  margin-right: 2px;
-  margin-left: 13px;
-}
-
-.tag__picture{
-  width: 20px;
-}
-
