style et structure tri WIP

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,105 @@
+/* Style des tags */
+.tag__list{
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 700;
+}
 
+.tag__item{
+  min-width: 100px;
+  height: 37px;
+  padding: 8px 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #3282F7;
+  border-radius: 5px;
+}
+
+.tag__button{
+  height: 20px;
+  margin-right: 2px;
+  margin-left: 13px;
+}
+
+.tag__picture{
+  width: 20px;
+}
+
+/* Style du tri */
+.sort__list{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.sort__item{
+  margin-right: 20px;
+  height: 69px;
+  min-width: 170px;
+  /* color: #FFFFFF; */
+  background-color: #E7E7E7;
+  padding: 23px 18px 24px 15px;
+  border-radius: 5px;
+}
+
+.sort__item--close{
+  width: 170px;
+}
+
+.sort__item--open{
+  min-width: 170px;
+  width: max-content;
+}
+
+.sort__item--ingredients{
+  background-color: #3282F7;
+}
+
+.sort__item--appliances{
+  background-color: #68D9A4;
+}
+
+.sort__item--tools{
+  background-color: #ED6454;
+}
+
+.sort__contenairButton{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sort__contenairButton>button{
+  color: #FFFFFF;
+  font-size: 18px;
+}
+
+/* FIXME c'est une solution non accessible */
+.sort__label{
+  display: none;
+}
+
+.sort__select{
+  /* display: none; */
+  border:none;
+  color: #FFFFFF;
+  background-color: #3282F7;
+}
+
+.sort__arrow{
+  width: 16px;
+}
+
+/* Style des cartes de recette */
+.recipes__list{
+  margin-top: 25px;
+}
 .recipe__ingredientsList{
   font-family: 'Roboto', sans-serif;
 }
