--- a/css/sort.css
+++ b/css/sort.css
@@ -1,29 +1,51 @@
 .sort__list{
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: row
 }
 
 .sort__item{
   margin-right: 20px;
   height: 69px;
   min-width: 170px;
-  /* color: #FFFFFF; */
+  width: max-content;
   background-color: #E7E7E7;
-  padding: 23px 18px 24px 15px;
   border-radius: 5px;
 }
 
 .sort__item--close{
   width: 170px;
+  padding: 23px 18px 24px 15px;
+}
+
+.sort__item--close>.sort__form{
+  display:none;
+}
+
+.sort__item--close>.sort__button{
+  display:block;
 }
 
 .sort__item--open{
-  min-width: 170px;
-  width: max-content;
+  min-width: 223px;
 }
 
-.sort__item--ingredients{
+.sort__item--open>.sort__form{
+  display:block;
+}
+
+.sort__item--open>.sort__button{
+  display:none;
+}
+
+.sort__arrow{
+  width: 16px;
+}
+
+.sort__arrow--up{
+  transform: rotate(180deg);
+}
+
+.sort__item--ingredients, .sort__form--ingredients{
   background-color: #3282F7;
 }
 
@@ -45,19 +67,52 @@
   font-size: 18px;
 }
 
+ /* TODO élargire la box selon le contenude .sort__choice*/
+.sort__form{
+  border-radius: 5px; 
+  max-height: 397px;
+  font-size: 18px;
+  padding: 25px 18px 12px 19px;
+}
+
+.sort__wrapper{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-bottom: 12px;
+}
+
 /* FIXME c'est une solution non accessible cf A11y wai-aria */
-.sort__field{
+.sort__label{
   display :none;
 }
 
-/* FIXME c'est une solution non accessible cf A11y wai-aria */
-.sort__choice {
-  display: none;
-  border:none;
-  color: #FFFFFF;
-  background-color: #3282F7;
+.sort__inputText{
+  border: none;
+  background-color: transparent;
 }
 
-.sort__arrow{
-  width: 16px;
+.sort__inputText::placeholder{
+color: rgba(255, 255, 255, 0.5);
+font-size: 18px;
 }
+
+
+.sort__choice {
+  /* FIXME c'est une solution non accessible cf A11y wai-aria */
+  /* display: none; */
+  display: flex;
+  flex-flow: column wrap;
+  /* align-items: flex-start;
+  align-content: flex-start; */
+  border:none;
+  color: #FFFFFF;
+  max-height: 341px;
+  max-width: 667px;
+}
+
+.choice__value{
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+
