--- a/css/recipe.css
+++ b/css/recipe.css
@@ -7,7 +7,7 @@
   z-index: -10;
 }
 
-.recipe__containerPicture{
+.recipe__pictureContainer{
   height: 178px;
   background-color: #C7BEBE;
 }
@@ -39,13 +39,9 @@
   font-size: 12px;
 }
 
-.recipe__process{
-  width: 171px;
-}
-
 .recipe__ingredientsList{
-  font-family: 'Roboto', sans-serif;
-  width: 171px;
+  min-width: 171px;
+  width: max-content;
 }
 
 .recipe__ingredientsItem{
@@ -56,6 +52,10 @@
   font-weight: 700;
 }
 
+.recipe__process{
+  flex-grow: 1;
+  font-family: 'Roboto', sans-serif;
+}
 
 
 
