dynamisation recipe card

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,11 @@
 
 .recipes__list{
   margin-top: 25px;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 50px;
+  column-gap: 50px;
+  grid-auto-flow : row;
 }
 
 
