--- a/css/sort.css
+++ b/css/sort.css
@@ -20,7 +20,7 @@
 }
 
 .sort__item--close>.sort__button{
-  display:block;
+  display:flex;
 }
 
 .sort__item--open{
@@ -57,7 +57,7 @@
 }
 
 .sort__button{
-  display: flex;
+  /* display: flex; */
   flex-direction: row;
   justify-content: space-between;
   align-items: baseline;
@@ -66,7 +66,7 @@
   font-size: 18px;
 }
 
- /* FIXME élargire la box selon le contenude .sort__choice*/
+/* FIXME élargire la box selon le contenude .sort__choice*/
 .sort__form{
   border-radius: 5px; 
   max-height: 397px;
