--- a/css/sort.css
+++ b/css/sort.css
@@ -96,6 +96,9 @@
   width: 100%;
   border: none;
   background-color: transparent;
+  color: #FFFFFF;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 /* FIXME */
